--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <h1>Brand New Blues</h1>
+    <h1><a href="index.html">Brand New Blues</a></h1>
     <nav>
       <a href="bio.html">About Me</a>
       <div id="me">
