devin site added

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
   <article class="projects project">
     <h2>My work:</h2>
   </article>
-  
+
   <article class="project" id="innboston">
     <div class="title">
       <h1>Inn Boston Reservations collection</h1>
       <p class="button"><a href="javascript:;">Details, please</a></p>
     </div>
     <div class="content">
-      <p class="minimize button"><a href="javascript:;">-</a></p>
+      <p class="minimize button"><a href="javascript:;">x</a></p>
       <img src="images/Screen%20Shot%202015-10-19%20at%2012.52.06%20PM.png" />
       <p>
         Inn Boston Reservations is a central reservation and property management service located in Boston. I designed and developed a collection of six websites for their newest properties. I centered my work around modern, simple design that conveyed the easy pleasure of renting one of these beautiful properties.
@@ -38,19 +38,34 @@
       <p class="button"><a href="http://backbaybeacon.com/">See it live!</a></p>
     </div>
   </article>
-  
+
   <article class="project" id="avaant">
     <div class="title">
       <h1>Avaant Inc.</h1>
       <p class="button"><a href="javascript:;">Details, please</a></p>
     </div>
     <div class="content">
-      <p class="minimize button"><a href="javascript:;">-</a></p>
+      <p class="minimize button"><a href="javascript:;">x</a></p>
       <img src="images/Screen%20Shot%202015-10-19%20at%209.12.41%20PM.png" />
       <p>
         Avaant Inc. is a startup launched at USC that aims to connect the entrepreneurial community on campus. It is the LinkedIn for startups and their early-stage employees. As CTO, I am currently in charge of developing the entire the site and managing the development team.
       </p>
       <p class="button"><a href="http://avaant.co/">See it live!</a></p>
+    </div>
+  </article>
+
+  <article class="project" id="devin">
+    <div class="title">
+      <h1>Devin Diamanté</h1>
+      <p class="button"><a href="javascript:;">Details, please</a></p>
+    </div>
+    <div class="content">
+      <p class="minimize button"><a href="javascript:;">x</a></p>
+      <img src="images/devin_site.png" />
+      <p>
+        Devin Diamanté is a high-class realtor working in Beverly Hills. I completely designed and developed the site from conception to launch. It is one of my most comprehensive and beautiful projects to date.
+      </p>
+      <p class="button"><a href="http://devindiamante.com/">See it live!</a></p>
     </div>
   </article>
 <!--    Work:
