Deloss block added

--- a/index.html
+++ b/index.html
@@ -68,6 +68,21 @@
       <p class="button"><a href="http://devindiamante.com/">See it live!</a></p>
     </div>
   </article>
+
+  <article class="project" id="deloss">
+    <div class="title">
+      <h1>C. Deloss Pickett</h1>
+      <p class="button"><a href="javascript:;">Details, please</a></p>
+    </div>
+    <div class="content">
+      <p class="minimize button"><a href="javascript:;">x</a></p>
+      <img src="images/delosssite.png" />
+      <p>
+        C. Deloss Pickett is a high-class realtor working in Beverly Hills. I completely designed and developed the site from conception to launch. It is one of my most comprehensive and beautiful projects to date.
+      </p>
+      <p class="button"><a href="http://delosspickett.com/">See it live!</a></p>
+    </div>
+  </article>
 <!--    Work:
 Avaant.co
 InnBoston
