Updated resume link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Andrew<br>Maney</h1>
     <h2>developer,<br>musician,<br>etc.</h2>
     <ul>
-      <li><a href="https://drive.google.com/file/d/0B6_xKOsnuuZheHVZMWZ0Y0lDdGc/view?usp=sharing" target="_blank">Resumé</a></li>
+      <li><a href="http://www-scf.usc.edu/~amaney/itp104/resume.html" target="_blank">Resumé</a></li>
       <li><a href="https://github.com/ablelincoln" target="_blank">GitHub</a></li>
     </ul>
     </div>
@@ -36,21 +36,6 @@
         Inn Boston Reservations is a central reservation and property management service located in Boston. I designed and developed a collection of six websites for their newest properties. I centered my work around modern, simple design that conveyed the easy pleasure of renting one of these beautiful properties.
       </p>
       <p class="button"><a href="http://backbaybeacon.com/">See it live!</a></p>
-    </div>
-  </article>
-
-  <article class="project" id="avaant">
-    <div class="title">
-      <h1>Avaant Inc.</h1>
-      <p class="button"><a href="javascript:;">Details, please</a></p>
-    </div>
-    <div class="content">
-      <p class="minimize button"><a href="javascript:;">x</a></p>
-      <img src="images/Screen%20Shot%202015-10-19%20at%209.12.41%20PM.png" />
-      <p>
-        Avaant Inc. is a startup launched at USC that aims to connect the entrepreneurial community on campus. It is the LinkedIn for startups and their early-stage employees. As CTO, I am currently in charge of developing the entire the site and managing the development team.
-      </p>
-      <p class="button"><a href="http://avaant.co/">See it live!</a></p>
     </div>
   </article>
 
@@ -83,6 +68,21 @@
       <p class="button"><a href="http://delosspickett.com/">See it live!</a></p>
     </div>
   </article>
+
+  <!-- <article class="project" id="avaant">
+    <div class="title">
+      <h1>Avaant Inc.</h1>
+      <p class="button"><a href="javascript:;">Details, please</a></p>
+    </div>
+    <div class="content">
+      <p class="minimize button"><a href="javascript:;">x</a></p>
+      <img src="images/Screen%20Shot%202015-10-19%20at%209.12.41%20PM.png" />
+      <p>
+        Avaant Inc. is a startup launched at USC that aims to connect the entrepreneurial community on campus. It is the LinkedIn for startups and their early-stage employees. As CTO, I am currently in charge of developing the entire the site and managing the development team.
+      </p>
+      <p class="button"><a href="http://avaant.co/">See it live!</a></p>
+    </div>
+  </article> -->
 <!--    Work:
 Avaant.co
 InnBoston
