--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             I am a freelance web developer. I strive to make my websites <strong>clean</strong>, <strong>minimal</strong>, and <strong>responsive</strong>. These are the design principles I live by.
           </p>
           <p>
-            I am proficient with modern web technologies including: HTML5, CSS3, Bootstrap, JavaScript, jQuery, Ruby, and Ruby on Rails.
+            I am proficient with modern web technologies including: <span class="html-text">HTML5</span>, <span class="css-text">CSS3</span>, <span class="sass-text">Sass</span>, <span class="boot-text">Bootstrap</span>, <span class="js-text">JavaScript</span>, <span class="jq-text">jQuery</span>, <span class="ruby-text">Ruby</span>, and <span class="rails-text">Ruby on Rails</span>.
           </p>
         </div>
       </div>
@@ -55,17 +55,25 @@
         <div class="col-md-6 col-md-offset-3">
           <h2>Projects</h2>
           <hr>
+        </div>
+        <div class="col-md-8 project-image">
+          <!-- <div class="overlay">
+            <a href="#" class="btn btn-default">View Site</a>
+          </div> -->
+          <div class="preview-top">
+            <span class="circle-red"></span>
+            <span class="circle-yellow"></span>
+            <span class="circle-green"></span>
+            <p class="preview-url">https://impactcryo.com/fitness-entrepreneur/</p>
+          </div>
+          <img src="images/impactsite.png" />
+        </div>
+        <div class="col-md-4 blurb">
           <p class="date">March 2017</p>
           <h3>Impact Cryotherapy</h3>
-        </div>
-        <div class="col-md-12 project-image">
-          <div class="overlay">
-            <a href="#" class="btn btn-default">View Site</a>
-          </div>
-          <img src="images/innboston.png" />
-        </div>
-        <div class="col-md-6 col-md-offset-3">
-          Blurb about this website. I loved making this website. It includes a form.
+          <p>Impact Cryotherapy is a cold-air suana distributor. I developed the landing page for their marketing campaign targeted at entrepreneurs. The page was built on <span class="wp-text">Wordpress</span>, but most of the styles I did by hand. I also created a signup form which I integrated with <span class="monkey-text">Survey Monkey</span>.
+          </p>
+          <a href="https://impactcryo.com/fitness-entrepreneur/" class="btn btn-default" target="_blank">View Page</a>
           <hr>
         </div>
 
@@ -74,8 +82,14 @@
           <h3>Trojan Tutors</h3>
         </div>
         <div class="col-md-12 project-image">
-          <div class="overlay">
-            <a href="#" class="btn btn-default">View Site</a>
+          <!-- <div class="overlay">
+            <a href="https://impactcryo.com/fitness-entrepreneur/" class="btn btn-default" target="_blank">View Site</a>
+          </div> -->
+          <div class="preview-top">
+            <span class="circle-red"></span>
+            <span class="circle-yellow"></span>
+            <span class="circle-green"></span>
+            <p class="preview-url">https://impactcryo.com/fitness-entrepreneur/</p>
           </div>
           <img src="images/trojantutors.png" />
         </div>
