more projects now with html

--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
       <!-- end About -->
 
       <!-- Projects -->
-      <div class="row projects">
+      <div class="row project-title">
         <div class="col-md-6 col-md-offset-3">
           <h2>Projects</h2>
           <hr>
         </div>
+      </div>
+
+      <div class="row project">
         <div class="col-md-8 project-image">
-          <!-- <div class="overlay">
-            <a href="#" class="btn btn-default">View Site</a>
-          </div> -->
           <div class="preview-top">
             <span class="circle-red"></span>
             <span class="circle-yellow"></span>
@@ -69,46 +69,51 @@
           <img src="images/impactsite.png" />
         </div>
         <div class="col-md-4 blurb">
-          <p class="date">March 2017</p>
           <h3>Impact Cryotherapy</h3>
           <p>Impact Cryotherapy is a cold-air suana distributor. I developed the landing page for their marketing campaign targeted at entrepreneurs. The page was built on <span class="wp-text">Wordpress</span>, but most of the styles I did by hand. I also created a signup form which I integrated with <span class="monkey-text">Survey Monkey</span>.
           </p>
           <a href="https://impactcryo.com/fitness-entrepreneur/" class="btn btn-default" target="_blank">View Page</a>
-          <hr>
         </div>
+      </div>
 
-        <div class="col-md-6 col-md-offset-3">
-          <p class="date">August 2016</p>
-          <h3>Trojan Tutors</h3>
-        </div>
-        <div class="col-md-12 project-image">
-          <!-- <div class="overlay">
-            <a href="https://impactcryo.com/fitness-entrepreneur/" class="btn btn-default" target="_blank">View Site</a>
-          </div> -->
+      <div class="row project">
+        <div class="col-md-8 project-image">
           <div class="preview-top">
             <span class="circle-red"></span>
             <span class="circle-yellow"></span>
             <span class="circle-green"></span>
-            <p class="preview-url">https://impactcryo.com/fitness-entrepreneur/</p>
+            <p class="preview-url">http://trojantutors.com/</p>
           </div>
-          <img src="images/trojantutors.png" />
+          <img src="images/tutors-large.png" />
         </div>
+        <div class="col-md-4 blurb">
+          <h3>Trojan Tutoring</h3>
+          <p>
+            Trojan Tutors is my own tutoring company. I created this website to collect student sign-ups and market the company. I used <span class="boot-text">Bootstrap</span> for the layout and <span class="jq-text">jQuery</span> for the animations. I'm very proud of the UI on this site. Go ahead and click around, check out the fun animations!
+          </p>
+          <a href="http://trojantutors.com/" class="btn btn-default" target="_blank">View Site</a>
+        </div>
+      </div>
 
-        <!-- <div class="col-md-6 col-md-offset-3">
+      <div class="row project">
+        <div class="col-md-8 project-image">
+          <div class="preview-top">
+            <span class="circle-red"></span>
+            <span class="circle-yellow"></span>
+            <span class="circle-green"></span>
+            <p class="preview-url">http://premierwomenscare.net/</p>
+          </div>
+          <img src="images/womens-site.png" />
+        </div>
+        <div class="col-md-4 blurb">
           <h3>Premier Women's Care</h3>
-          <p></p>
+          <a href="http://premierwomenscare.net/" class="btn btn-default" target="_blank">View Site</a>
         </div>
-        <div class="col-md-12 project-image"></div>
+      </div>
 
-        <div class="col-md-6 col-md-offset-3"></div>
-        <div class="col-md-12 project-image"></div>
-
-        <div class="col-md-6 col-md-offset-3"></div>
-        <div class="col-md-12 project-image"></div> -->
       </div>
       <!-- end Projects -->
 
-    </div>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
