resume, github, chefit

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <![endif]-->
   </head>
   <body>
-    <div class="content">
     <div class="container header">
       <div class="row">
         <div class="col-md-12">
@@ -38,14 +37,19 @@
           <h2>About Me</h2>
           <hr>
           <p>
-            I am a junior at the <span class="cardinal">University of Southern California</span> studying <strong>Physics</strong> and <strong>Computer Science</strong>
+            I am a senior at the <span class="cardinal">University of Southern California</span> studying <strong>Physics</strong> and <strong>Computer Science</strong>
           </p>
           <p>
             I am a freelance web developer. I strive to make my websites <strong>clean</strong>, <strong>minimal</strong>, and <strong>responsive</strong>. These are the design principles I live by.
           </p>
           <p>
-            I am proficient with modern web technologies including: <span class="html-text">HTML5</span>, <span class="css-text">CSS3</span>, <span class="sass-text">Sass</span>, <span class="boot-text">Bootstrap</span>, <span class="js-text">JavaScript</span>, <span class="jq-text">jQuery</span>, <span class="ruby-text">Ruby</span>, and <span class="rails-text">Ruby on Rails</span>.
+            I am proficient in modern web technologies including: <span class="html-text">HTML5</span>, <span class="css-text">CSS3</span>, <span class="sass-text">Sass</span>, <span class="boot-text">Bootstrap</span>, <span class="js-text">JavaScript</span>, <span class="node-text">Node.js</span>, <span class="jq-text">jQuery</span>, <span class="ruby-text">Ruby</span>, and <span class="rails-text">Ruby on Rails</span>.
           </p>
+          <div class="buttons">
+            <a href="images/Resume.pdf" class="btn btn-default" target="_blank">Resumé</a>
+            <a href="https://github.com/AbleLincoln" class="btn btn-default" target="_blank">Github</a>
+            <a href="" class="btn btn-default">Contact</a>
+          </div>
         </div>
       </div>
       <!-- end About -->
@@ -55,6 +59,25 @@
         <div class="col-md-6 col-md-offset-3">
           <h2>Projects</h2>
           <hr>
+        </div>
+      </div>
+
+      <div class="row project">
+        <div class="col-md-8 project-image">
+          <div class="preview-top">
+            <span class="circle-red"></span>
+            <span class="circle-yellow"></span>
+            <span class="circle-green"></span>
+            <p class="preview-url">https://chefit.com/</p>
+          </div>
+          <img src="images/chefitsite.png" />
+        </div>
+        <div class="col-md-4 blurb">
+          <h3>CHEFIT</h3>
+          <p>
+            CHEFIT is an on-demand personal chef service. I built the app with <span class="node-text">Node.js</span>. I implemented a reservation form as well as payment via <span class="square-text">Square API</span> and automated email via <span class="nodemailer-text">Nodemailer API</span>. I also designed and developed the front-end with vanilla <span class="js-text">JavaScript</span> and <span class="css-text">CSS</span>.
+          </p>
+          <a href="https://chefit.herokuapp.com/" class="btn btn-default" target="_blank">View Site</a>
         </div>
       </div>
 
@@ -107,12 +130,24 @@
         </div>
         <div class="col-md-4 blurb">
           <h3>Premier Women's Care</h3>
+          <p>
+            Premier Women's Care is a prominent OB-GYN located in The Woodlands, Texas. As the homepage for a medical service, I desiged the site with <strong>accessibility</strong> and <strong>ease-of-use</strong> in mind. The site is single page with a speedy tab-based navigation. It includes contact information, available services, and important forms and documents.
+          </p>
           <a href="http://premierwomenscare.net/" class="btn btn-default" target="_blank">View Site</a>
         </div>
       </div>
-
-      </div>
       <!-- end Projects -->
+
+      <!-- Contact -->
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <h2>Contact</h2>
+          <hr>
+          <p>
+            Feel free to email me at <strong>amaney@usc.edu</strong>
+          </p>
+        </div>
+      </div>
 
     </div>
 
