--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="buttons">
             <a href="images/Resume.pdf" class="btn btn-default" target="_blank">Resumé</a>
             <a href="https://github.com/AbleLincoln" class="btn btn-default" target="_blank">Github</a>
-            <a href="" class="btn btn-default">Contact</a>
+            <a href="#contact" class="btn btn-default">Contact</a>
           </div>
         </div>
       </div>
@@ -139,7 +139,7 @@
       <!-- end Projects -->
 
       <!-- Contact -->
-      <div class="row">
+      <div class="row" id="contact">
         <div class="col-md-6 col-md-offset-3">
           <h2>Contact</h2>
           <hr>
