from light. chefit url updated

--- a/index.html
+++ b/index.html
@@ -77,25 +77,7 @@
           <p>
             CHEFIT is an on-demand personal chef service. I built the app with <span class="node-text">Node.js</span>. I implemented a reservation form as well as payment via <span class="square-text">Square API</span> and automated email via <span class="nodemailer-text">Nodemailer API</span>. I also designed and developed the front-end with vanilla <span class="js-text">JavaScript</span> and <span class="css-text">CSS</span>.
           </p>
-          <a href="https://chefit.herokuapp.com/" class="btn btn-default" target="_blank">View Site</a>
-        </div>
-      </div>
-
-      <div class="row project">
-        <div class="col-md-8 project-image">
-          <div class="preview-top">
-            <span class="circle-red"></span>
-            <span class="circle-yellow"></span>
-            <span class="circle-green"></span>
-            <p class="preview-url">https://impactcryo.com/fitness-entrepreneur/</p>
-          </div>
-          <img src="images/impactsite.png" />
-        </div>
-        <div class="col-md-4 blurb">
-          <h3>Impact Cryotherapy</h3>
-          <p>Impact Cryotherapy is a cold-air suana distributor. I developed the landing page for their marketing campaign targeted at entrepreneurs. The page was built on <span class="wp-text">Wordpress</span>, but most of the styles I did by hand. I also created a signup form which I integrated with <span class="monkey-text">Survey Monkey</span>.
-          </p>
-          <a href="https://impactcryo.com/fitness-entrepreneur/" class="btn btn-default" target="_blank">View Page</a>
+          <a href="http://www.getchefit.com/" class="btn btn-default" target="_blank">View Site</a>
         </div>
       </div>
 
@@ -115,6 +97,43 @@
             Trojan Tutors is my own tutoring company. I created this website to collect student sign-ups and market the company. I used <span class="boot-text">Bootstrap</span> for the layout and <span class="jq-text">jQuery</span> for the animations. I'm very proud of the UI on this site. Go ahead and click around, check out the fun animations!
           </p>
           <a href="http://trojantutors.com/" class="btn btn-default" target="_blank">View Site</a>
+        </div>
+      </div>
+
+        <div class="row project">
+          <div class="col-md-8 project-image">
+            <div class="preview-top">
+              <span class="circle-red"></span>
+              <span class="circle-yellow"></span>
+              <span class="circle-green"></span>
+              <p class="preview-url">https://impactcryo.com/fitness-entrepreneur/</p>
+            </div>
+            <img src="images/impactsite.png" />
+          </div>
+          <div class="col-md-4 blurb">
+            <h3>Impact Cryotherapy</h3>
+            <p>Impact Cryotherapy is a cold-air suana distributor. I developed the landing page for their marketing campaign targeted at entrepreneurs. The page was built on <span class="wp-text">Wordpress</span>, but most of the styles I did by hand. I also created a signup form which I integrated with <span class="monkey-text">Survey Monkey</span>.
+            </p>
+            <a href="https://impactcryo.com/fitness-entrepreneur/" class="btn btn-default" target="_blank">View Page</a>
+          </div>
+        </div>
+
+      <div class="row project">
+        <div class="col-md-8 project-image">
+          <div class="preview-top">
+            <span class="circle-red"></span>
+            <span class="circle-yellow"></span>
+            <span class="circle-green"></span>
+            <p class="preview-url">http://from-light.com/</p>
+          </div>
+          <img src="images/from-lightsite.png" />
+        </div>
+        <div class="col-md-4 blurb">
+          <h3>From Light</h3>
+          <p>
+            From Light is an indie game developed at <span class="cardinal">USC</span>. I was asked to update their website. I created a form, integrated a video, and added a credits page. The design is ethereal yet simple, mimicking the design styles of the game.
+          </p>
+          <a href="http://from-light.com/" class="btn btn-default" target="_blank">View Site</a>
         </div>
       </div>
 
